--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib                    3.8.2
-plotly                        5.19.0
-scikit-learn                  1.4.2
-streamlit                     1.33.0
-pandas                        2.2.2
-numpy                         1.23.5
-seaborn                       0.13.0
-sklearn                       1.4.2
+matplotlib==3.8.2
+plotly==5.19.0
+scikit-learn==1.4.2
+streamlit==1.33.0
+pandas== 2.2.2
+numpy==1.23.5
+seaborn==0.13.0
+sklearn==1.4.2
